{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 239,
  "lineage": "e3da0cac-0068-2dd8-3a2a-15d73e506707",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:security-group/sg-01570550a46f3b72d",
            "description": "PostgreSQL security group",
            "egress": [],
            "id": "sg-01570550a46f3b72d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.99.0.0/18"
                ],
                "description": "PostgreSQL access from within VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "colleague-view-20220303164416190400000003",
            "name_prefix": "colleague-view-",
            "owner_id": "208557507792",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view",
              "Owner": "user"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-002de337afb9db467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.99.0.0/18"
            ],
            "description": "PostgreSQL access from within VPC",
            "from_port": 5432,
            "id": "sgrule-2234557977",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01570550a46f3b72d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:route-table/rtb-00a5d669883136db8",
            "id": "rtb-00a5d669883136db8",
            "owner_id": "208557507792",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2a",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-002de337afb9db467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:route-table/rtb-0820e06b31bb517d9",
            "id": "rtb-0820e06b31bb517d9",
            "owner_id": "208557507792",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2b",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-002de337afb9db467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:route-table/rtb-00cdef1d24bd3ff84",
            "id": "rtb-00cdef1d24bd3ff84",
            "owner_id": "208557507792",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2c",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2c",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-002de337afb9db467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:route-table/rtb-0ee3d0dd0cae07b38",
            "id": "rtb-0ee3d0dd0cae07b38",
            "owner_id": "208557507792",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view-private-eu-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view-private-eu-west-2a",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-002de337afb9db467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:route-table/rtb-062712d92eeea3c43",
            "id": "rtb-062712d92eeea3c43",
            "owner_id": "208557507792",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view-private-eu-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view-private-eu-west-2b",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-002de337afb9db467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:route-table/rtb-08eaf1b7a8b2b0711",
            "id": "rtb-08eaf1b7a8b2b0711",
            "owner_id": "208557507792",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view-private-eu-west-2c",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view-private-eu-west-2c",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-002de337afb9db467"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adaca0653569b694",
            "route_table_id": "rtb-00a5d669883136db8",
            "subnet_id": "subnet-0d4694a0c0b06df65"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072de5585aa0318bf",
            "route_table_id": "rtb-0820e06b31bb517d9",
            "subnet_id": "subnet-00a591dc4e810e5e7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018c1891e764b5e50",
            "route_table_id": "rtb-00cdef1d24bd3ff84",
            "subnet_id": "subnet-065d85ab0a45907d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:subnet/subnet-0d4694a0c0b06df65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.99.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4694a0c0b06df65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208557507792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-002de337afb9db467"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:subnet/subnet-00a591dc4e810e5e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.99.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a591dc4e810e5e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208557507792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-002de337afb9db467"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:subnet/subnet-065d85ab0a45907d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.99.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065d85ab0a45907d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208557507792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2c",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view-db-eu-west-2c",
              "Owner": "user"
            },
            "vpc_id": "vpc-002de337afb9db467"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:208557507792:vpc/vpc-002de337afb9db467",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.99.0.0/18",
            "default_network_acl_id": "acl-0dbdfa8e43d89aa98",
            "default_route_table_id": "rtb-014cbc1dca180bacd",
            "default_security_group_id": "sg-0e4bbc25e73143e21",
            "dhcp_options_id": "dopt-679fad0f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-002de337afb9db467",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014cbc1dca180bacd",
            "owner_id": "208557507792",
            "tags": {
              "Environment": "Dev",
              "Name": "colleague-view",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "colleague-view",
              "Owner": "user"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}